# cppexample

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  IWebsite  LICENSE  Makefile  OWebsite  README.md  RWebsite  demoscript  launcher.py
CMake/: FindPoco.cmake
demoscript/: README.md  kandidatinterface  kandidatkill  safearchitecture  unsafearchitecture
src/: Child.cpp  Connection.h  ConnectionInterface.h  Constants.h  Crypt.cpp  Crypt.h  IParent.cpp  IWebsite.cpp  JSONhandler.cpp  JSONhandler.h  Jsonhandler.cpp  Jsonhandler.h  OChild.cpp  OParent.cpp  OWebsite.cpp  Parent.cpp  RChild.cpp  RParent.cpp  RWebsite.cpp  ThirdParty.cpp  Website.cpp  client.cpp  consenthandler.cpp  crypt.cpp  jsonhandler.cpp  jsonhandler.h  jsonparser.cpp  jsonparser.cpp.old  jsonparser.h  mininetexample.h  pdatahandler.cpp  policyhandler.cpp  server.cpp
src/interfaces/: Constants.h  IParent.cpp  IWebsite.cpp  InterfaceHelper.cpp  InterfaceHelper.h  OChild.cpp  OParent.cpp  OWebsite.cpp  RChild.cpp  RParent.cpp  RWebsite.cpp  ThirdParty.cpp
src/rsa-keys/: child.pub  parent  website  website.pub
src/types/: request.cpp
test/: json_test.cpp  pdata.json  rsa_key  rsa_key.pub
test/communication/: child.data  com-test.cpp  policy.data
test/communication/rsa-keys/: child  parent.pub
